--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,14 @@
 {
     "version": "0.2.0",
     "configurations": [
-        
         {
             "type": "cppdbg",
             "request": "launch",
             "name": "GDB",
+            "preLaunchTask": "make",
             "program": "${workspaceFolder}/bin/dbf-yes",
             "cwd": "${workspaceFolder}",
-            "args": ["-s", "1", "hello"]
+            "args": ["-s", "world"]
         }
     ]
 }
