公共方法抽取并规范化，初步形成工具类的模板

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "cstdlib": "c",
         "getopt.h": "c",
         "stdio.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "system.h": "c"
     }
 }
